--- a/package.json
+++ b/package.json
@@ -6,14 +6,12 @@
   "repository": "https://github.com/BrewBlox/brewblox-ui",
   "license": "GPL-3.0",
   "scripts": {
-    "spark:obj": "bash app/reset-objects.sh app/presets/spark_objects.json",
-    "spark:sparkey": "npm run spark:obj -- sparkey",
-    "spark:spock": "npm run spark:obj -- spock",
-    "spark:reset": "npm run spark:sparkey && npm run spark:spock",
-    "couchdb:cors": "bash app/enable_cors.sh",
-    "compose:down": "docker-compose down",
-    "compose:up": "docker-compose up -d",
-    "compose:new": "npm run compose:down && npm run compose:up && npm run spark:reset && npm run couchdb:cors",
+    "spark:reset": "bash app/reset_spark.sh app/presets/spark_blocks.json",
+    "spark:sparkey": "npm run spark:reset -- sparkey",
+    "spark:spock": "npm run spark:reset -- spock",
+    "spark:blocks": "npm run spark:sparkey && npm run spark:spock",
+    "couchdb:docs": "bash app/reset_ui.sh services dashboards dashboard-items",
+    "compose:new": "docker-compose down && docker-compose up -d && npm run spark:blocks && npm run couchdb:docs",
     "serve": "vue-cli-service serve",
     "start": "npm run compose:new && npm run serve",
     "build": "vue-cli-service build",
