--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "serve": "vue-cli-service serve",
     "start": "npm run compose:new && npm run serve",
     "build": "vue-cli-service build",
-    "devbuild": "npm run build && mkdir -p ./devdist && rm -r ./devdist/*; cp -r ./dist/* ./devdist/",
+    "devbuild": "npm run build && mkdir -p ./app/dist && rm -r ./app/dist/*; cp -r ./dist/* ./app/dist/",
     "test": "jest",
     "e2e": "npm run compose:new && vue-cli-service test:e2e --mode development",
     "tslint": "tslint -c tslint.json 'src/**/*.ts'",
