--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
 
   sparksimulator:
     image: brewblox/firmware-simulator:develop
+    ports:
+      - "7376:7376"
 
   sparkey:
     image: brewblox/brewblox-devcon-spark:develop
