--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
     "object-curly-newline": 0,
     "no-param-reassign": 0,
     "no-debugger": 2,
+    "no-mixed-operators": 0,
     "max-len": [
       1,
       120,
