autofix new lint rules

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test": "jest",
     "e2e": "npm run compose:new && vue-cli-service test:e2e --mode development",
     "lint": "eslint \"src/**/*.{js,ts,vue}\"",
+    "fix": "npm run lint -- --fix",
     "e2e:open": "vue-cli-service e2e:open"
   },
   "engines": {
@@ -61,17 +62,16 @@
     "@vue/cli-plugin-typescript": "^3.2.2",
     "@vue/cli-plugin-unit-jest": "^3.2.2",
     "@vue/cli-service": "^3.2.2",
-    "@vue/eslint-config-airbnb": "^3.0.5",
     "@vue/eslint-config-typescript": "^3.2.0",
     "@vue/test-utils": "^1.0.0-beta.28",
     "babel-core": "^7.0.0-0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "eslint": "^5.11.1",
     "git-describe": "^4.0.3",
     "semver": "^5.6.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "ts-jest": "^23.10.5",
-    "tslint-config-airbnb": "^5.11.1",
     "tsutils": "^3.6.0",
     "typescript-eslint-parser": "^21.0.2",
     "vue-cli-plugin-webpack-bundle-analyzer": "^1.2.0",
