--- a/.eslintrc
+++ b/.eslintrc
@@ -7,8 +7,7 @@
     "parser": "typescript-eslint-parser"
   },
   "extends": [
-    "plugin:vue/essential",
-    "@vue/airbnb",
+    "plugin:vue/recommended",
     "@vue/typescript"
   ],
   "rules": {
@@ -23,6 +22,7 @@
     "no-param-reassign": 0,
     "no-debugger": 2,
     "no-mixed-operators": 0,
+    "vue/max-attributes-per-line": 0,
     "max-len": [
       1,
       120,
