retry reset spark on error status

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "https://github.com/BrewBlox/brewblox-ui",
   "license": "GPL-3.0",
   "scripts": {
-    "spark:reset": "bash app/reset_spark.sh app/presets/spark_blocks.json",
+    "spark:reset": "node app/reset_spark.js app/presets/spark_blocks.json",
     "spark:sparkey": "npm run spark:reset -- sparkey",
     "spark:spock": "npm run spark:reset -- spock",
     "spark:blocks": "npm run spark:sparkey && npm run spark:spock",
@@ -66,8 +66,11 @@
     "@vue/test-utils": "^1.0.0-beta.28",
     "babel-core": "^7.0.0-0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "dotenv": "^6.2.0",
     "eslint": "^5.11.1",
     "git-describe": "^4.0.3",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.5",
     "semver": "^5.6.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
