--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,9 +72,10 @@ services:
 
   traefik:
     image: traefik
-    command: -c /dev/null --api --docker --docker.domain=docker.localhost
+    command: -c /config/traefik.toml --docker --docker.domain=brewblox.local
     ports:
-      - "9000:80"
-      - "9001:8080"
+      - "9000:9000"
+      - "9001:9001"
     volumes:
+      - ./app/traefik:/config
       - /var/run/docker.sock:/var/run/docker.sock
