Rename /app directory to /dev for clarity

--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
   "repository": "https://github.com/BrewBlox/brewblox-ui",
   "license": "GPL-3.0",
   "scripts": {
-    "spark:reset": "node app/reset_spark.js app/presets/spark_blocks.json",
+    "spark:reset": "node dev/reset_spark.js dev/presets/spark_blocks.json",
     "spark:sparkey": "npm run spark:reset -- sparkey",
     "spark:spock": "npm run spark:reset -- spock",
     "spark:blocks": "npm run spark:sparkey && npm run spark:spock",
-    "couchdb:docs": "bash app/reset_ui.sh services dashboards dashboard-items",
-    "cert:check": "bash app/check_cert.sh",
+    "couchdb:docs": "bash dev/reset_ui.sh services dashboards dashboard-items",
+    "cert:check": "bash dev/check_cert.sh",
     "compose:new": "docker-compose down && npm run cert:check && docker-compose up -d && npm run spark:blocks && npm run couchdb:docs",
     "serve": "vue-cli-service serve",
     "start": "npm run compose:new && npm run serve",
     "build": "vue-cli-service build --modern",
-    "devbuild": "npm run build && mkdir -p ./app/dist && rm -r ./app/dist/*; cp -r ./dist/* ./app/dist/",
+    "devbuild": "npm run build && mkdir -p ./dev/dist && rm -r ./dev/dist/*; cp -r ./dist/* ./dev/dist/",
     "test": "jest",
     "e2e": "npm run compose:new && vue-cli-service test:e2e --mode development",
     "lint": "eslint \"src/**/*.{js,ts,vue}\"",
