--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "npm": ">= 5.6.0"
   },
   "dependencies": {
+    "ajv-keywords": "^3.2.0",
     "date-fns": "^1.30.1",
     "lodash": "^4.17.11",
     "parse-duration": "^0.1.1",
@@ -38,7 +39,8 @@
     "quasar-framework": "^0.17.18",
     "query-string": "^6.2.0",
     "shortid": "^2.2.14",
-    "typescript": "^3.2.2",
+    "tslint": "^5.12.1",
+    "typescript": "^3.2.4",
     "url-safe-string": "^1.1.0",
     "vue": "^2.5.21",
     "vue-class-component": "^6.3.2",
@@ -68,7 +70,7 @@
     "babel-core": "^7.0.0-0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "dotenv": "^6.2.0",
-    "eslint": "^5.11.1",
+    "eslint": "^5.12.1",
     "git-describe": "^4.0.3",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
