--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/shortid": "0.0.29",
     "@types/webpack": "^4.4.22",
     "@types/webpack-env": "^1.13.6",
+    "@typescript-eslint/parser": "^1.1.0",
     "@vue/cli-plugin-babel": "^3.2.2",
     "@vue/cli-plugin-e2e-cypress": "^3.2.2",
     "@vue/cli-plugin-eslint": "^3.2.2",
@@ -77,7 +78,6 @@
     "stylus-loader": "^3.0.1",
     "ts-jest": "^23.10.5",
     "tsutils": "^3.6.0",
-    "typescript-eslint-parser": "^21.0.2",
     "vue-cli-plugin-webpack-bundle-analyzer": "^1.2.0",
     "vue-eslint-parser": "^4.0.3",
     "vue-template-compiler": "^2.5.21"
