setup history on compose start

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "spark:spock": "npm run spark:reset -- spock",
     "spark:blocks": "npm run spark:sparkey && npm run spark:spock",
     "couchdb:docs": "node dev/reset_datastore.js dev/presets services dashboards dashboard-items",
+    "history:config": "curl -Sk -X POST https://localhost:9001/history/query/configure",
     "cert:check": "bash dev/check_cert.sh",
-    "compose:new": "docker-compose down && npm run cert:check && docker-compose up -d && npm run spark:blocks && npm run couchdb:docs",
+    "compose:new": "docker-compose down && npm run cert:check && docker-compose up -d && npm run compose:setup",
+    "compose:setup": "npm run spark:blocks && npm run couchdb:docs && npm run history:config",
     "serve": "vue-cli-service serve",
     "start": "npm run compose:new && npm run serve",
     "build": "vue-cli-service build --modern",
