--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "npm": ">= 5.6.0"
   },
   "dependencies": {
+    "@types/d3": "^5.7.0",
+    "d3": "^5.9.0",
+    "dagre-d3": "^0.6.3",
     "date-fns": "^1.30.1",
     "lodash": "^4.17.11",
     "parse-duration": "^0.1.1",
