--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "@types/d3": "^5.7.0",
-    "d3": "^5.9.0",
+    "d3-selection": "^1.4.0",
     "dagre-d3": "^0.6.3",
     "date-fns": "^1.30.1",
     "lodash": "^4.17.11",
@@ -48,7 +48,7 @@
     "vue": "^2.5.21",
     "vue-class-component": "^6.3.2",
     "vue-i18n": "^8.6.0",
-    "vue-property-decorator": "^7.2.0",
+    "vue-property-decorator": "^7.3.0",
     "vue-router": "^3.0.2",
     "vue-svg-loader": "^0.9.0",
     "vuedraggable": "^2.17.0",
