--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,20 +47,7 @@ services:
       - "traefik.frontend.rule=PathPrefix: /sparkey"
     command: >
       --name=sparkey
-      --device-host=192.168.1.58
-
-  sim:
-    image: brewblox/brewblox-devcon-spark:develop
-    privileged: true
-    depends_on:
-      - eventbus
-      - datastore
-    labels:
-      - "traefik.port=5000"
-      - "traefik.frontend.rule=PathPrefix: /sim"
-    command: >
-      --name=sim
-      --device-host=192.168.1.2
+      --device-host=sparksimulator
 
   spock:
     image: brewblox/brewblox-devcon-spark:develop
