--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,5 +21,7 @@
       "language": "typescript",
       "autoFix": true
     }
-  ]
+  ],
+  "editor.formatOnSave": true,
+  "jest.runAllTestsFirst": false
 }
