--- a/package.json
+++ b/package.json
@@ -31,18 +31,20 @@
     "npm": ">= 5.6.0"
   },
   "dependencies": {
+    "@quasar/extras": "^1.1.1",
     "@types/d3": "^5.7.0",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
     "d3-selection": "^1.4.0",
     "dagre-d3": "^0.6.3",
     "date-fns": "^1.30.1",
+    "eslint-plugin-vue": "^5.2.2",
     "lodash": "^4.17.11",
     "parse-duration": "^0.1.1",
     "plotly.js-basic-dist": "^1.43.1",
     "portal-vue": "^1.5.1",
     "pouchdb": "^7.0.0",
-    "quasar-extras": "^2.0.9",
-    "quasar-framework": "^0.17.18",
+    "quasar": "^1.0.0-beta.11",
     "query-string": "^6.2.0",
     "shortid": "^2.2.14",
     "svg-path-properties": "^0.4.8",
@@ -77,7 +79,7 @@
     "@vue/eslint-config-typescript": "^3.2.0",
     "@vue/test-utils": "^1.0.0-beta.28",
     "babel-core": "^7.0.0-0",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-imports": "^1.5.1",
     "dotenv": "^6.2.0",
     "eslint": "^5.12.1",
     "git-describe": "^4.0.3",
@@ -89,6 +91,7 @@
     "stylus-loader": "^3.0.1",
     "ts-jest": "^23.10.5",
     "tsutils": "^3.6.0",
+    "vue-cli-plugin-quasar": "^1.0.0-beta.0",
     "vue-cli-plugin-webpack-bundle-analyzer": "^1.2.0",
     "vue-eslint-parser": "^4.0.3",
     "vue-template-compiler": "^2.5.21"
