--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "d3-selection": "^1.4.0",
     "dagre-d3": "^0.6.3",
     "date-fns": "^1.30.1",
+    "file-saver": "^2.0.1",
     "lodash": "^4.17.11",
     "parse-duration": "^0.1.1",
     "plotly.js-basic-dist": "^1.45.3",
