--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "dotenv": "^6.2.0",
     "eslint": "^5.15.3",
     "git-describe": "^4.0.4",
-    "jest": "^24.5.0",
+    "jest": ">=22.0.0 <24.0.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
     "semver": "^5.6.0",
