--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "vue-i18n": "^8.9.0",
     "vue-property-decorator": "^7.3.0",
     "vue-router": "^3.0.2",
-    "vue-svg-loader": "^0.9.0",
+    "vuedraggable": "^2.20.0",
     "vuedraggable": "^2.19.3",
     "vuex": "^3.1.0"
   },
