--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "babel-plugin-transform-imports": "^1.5.1",
     "dotenv": "^6.2.0",
     "eslint": "^5.16.0",
+    "fork-ts-checker-webpack-plugin": "^1.3.1",
     "git-describe": "^4.0.4",
     "jest": ">=22.0.0 <24.0.0",
     "request": "^2.88.0",
