--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@quasar/extras": "^1.1.2",
     "@types/d3": "^5.7.2",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^24.8.0",
     "d3-selection": "^1.4.0",
     "dagre-d3": "^0.6.3",
