--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "pouchdb": "^7.0.0",
     "quasar": "^1.0.0-beta.23",
     "query-string": "^6.5.0",
+    "save-svg-as-png": "^1.4.14",
     "shortid": "^2.2.14",
     "svg-path-properties": "^0.4.8",
     "typescript": "^3.4.5",
