--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,8 @@
     }
   ],
   "editor.formatOnSave": true,
-  "jest.runAllTestsFirst": false
+  "jest.runAllTestsFirst": false,
+  "[typescript]": {
+    "editor.defaultFormatter": "vscode.typescript-language-features"
+  }
 }
