--- a/package.json
+++ b/package.json
@@ -30,49 +30,49 @@
     "npm": ">= 5.6.0"
   },
   "dependencies": {
-    "@quasar/extras": "^1.1.4",
+    "@quasar/extras": "^1.2.0",
     "@types/d3": "^5.7.2",
     "babel-jest": "^24.8.0",
     "d3-selection": "^1.4.0",
     "dagre-d3": "^0.6.3",
     "date-fns": "^1.30.1",
     "file-saver": "^2.0.2",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "parse-duration": "^0.1.1",
     "plotly.js-basic-dist": "^1.48.3",
     "portal-vue": "^1.5.1",
     "pouchdb": "^7.1.1",
-    "quasar": "^1.0.0-rc.5",
+    "quasar": "^1.0.5",
     "query-string": "^6.8.1",
     "save-svg-as-png": "^1.4.14",
     "shortid": "^2.2.14",
     "svg-path-properties": "^0.4.11",
-    "typescript": "^3.5.2",
+    "typescript": "^3.5.3",
     "url-safe-string": "^1.1.0",
     "vue": "^2.6.10",
     "vue-class-component": "^6.3.2",
-    "vue-i18n": "^8.11.2",
-    "vue-property-decorator": "^7.3.0",
-    "vue-router": "^3.0.6",
+    "vue-i18n": "^8.12.0",
+    "vue-property-decorator": "^8.2.1",
+    "vue-router": "^3.0.7",
     "vuedraggable": "^2.23.0",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@types/jest": "^23.3.14",
-    "@types/lodash": "^4.14.135",
+    "@types/lodash": "^4.14.136",
     "@types/plotly.js": "^1.44.9",
-    "@types/pouchdb": "^6.3.3",
+    "@types/pouchdb": "^6.4.0",
     "@types/shortid": "0.0.29",
-    "@types/webpack": "^4.4.34",
-    "@types/webpack-env": "^1.13.9",
-    "@typescript-eslint/eslint-plugin": "^1.11.0",
-    "@typescript-eslint/parser": "^1.11.0",
-    "@vue/cli-plugin-babel": "^3.8.0",
-    "@vue/cli-plugin-eslint": "^3.8.0",
-    "@vue/cli-plugin-typescript": "^3.8.1",
-    "@vue/cli-plugin-unit-jest": "^3.8.0",
-    "@vue/cli-service": "^3.8.4",
+    "@types/webpack": "^4.32.0",
+    "@types/webpack-env": "^1.14.0",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
+    "@vue/cli-plugin-babel": "^3.9.2",
+    "@vue/cli-plugin-eslint": "^3.9.2",
+    "@vue/cli-plugin-typescript": "^3.9.0",
+    "@vue/cli-plugin-unit-jest": "^3.9.0",
+    "@vue/cli-service": "^3.9.3",
     "@vue/eslint-config-typescript": "^3.2.1",
     "@vue/test-utils": "^1.0.0-beta.29",
     "babel-core": "^7.0.0-0",
@@ -80,7 +80,7 @@
     "dotenv": "^6.2.0",
     "eslint": "^5.16.0",
     "eslint-plugin-simple-import-sort": "^3.1.1",
-    "fork-ts-checker-webpack-plugin": "^1.3.7",
+    "fork-ts-checker-webpack-plugin": "^1.4.3",
     "git-describe": "^4.0.4",
     "jest": ">=22.0.0 <24.0.0",
     "request": "^2.88.0",
@@ -90,7 +90,7 @@
     "stylus-loader": "^3.0.1",
     "ts-jest": "^23.10.5",
     "tsutils": "^3.14.0",
-    "vue-cli-plugin-quasar": "^1.0.0-rc.3",
+    "vue-cli-plugin-quasar": "^1.0.0",
     "vue-cli-plugin-webpack-bundle-analyzer": "^1.4.0",
     "vue-eslint-parser": "^4.0.3",
     "vue-template-compiler": "^2.6.10",
