--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "file-saver": "^2.0.2",
     "lodash": "^4.17.15",
     "parse-duration": "^0.1.1",
-    "plotly.js-basic-dist": "^1.48.3",
+    "plotly.js-basic-dist": "^1.49.0",
     "portal-vue": "^1.5.1",
     "pouchdb": "^7.1.1",
     "quasar": "^1.0.5",
@@ -64,7 +64,7 @@
     "@types/plotly.js": "^1.44.9",
     "@types/pouchdb": "^6.4.0",
     "@types/shortid": "0.0.29",
-    "@types/webpack": "^4.32.0",
+    "@types/webpack": "^4.32.1",
     "@types/webpack-env": "^1.14.0",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
@@ -82,7 +82,7 @@
     "eslint-plugin-simple-import-sort": "^3.1.1",
     "fork-ts-checker-webpack-plugin": "^1.4.3",
     "git-describe": "^4.0.4",
-    "jest": ">=22.0.0 <24.0.0",
+    "jest": "^24.8.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
     "semver": "^5.7.0",
