--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "validate": "tsc --noEmit"
   },
   "engines": {
-    "node": ">= 8.9.0",
-    "npm": ">= 5.6.0"
+    "node": ">= 10.13.0",
+    "npm": ">= 6.4.1"
   },
   "dependencies": {
     "@quasar/extras": "^1.2.0",
@@ -43,7 +43,7 @@
     "portal-vue": "^1.5.1",
     "pouchdb": "^7.1.1",
     "quasar": "^1.0.5",
-    "query-string": "^6.8.1",
+    "query-string": "^6.8.2",
     "save-svg-as-png": "^1.4.14",
     "shortid": "^2.2.14",
     "svg-path-properties": "^0.4.11",
@@ -89,12 +89,13 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "ts-jest": "^23.10.5",
-    "tsutils": "^3.14.0",
+    "tsutils": "^3.14.1",
     "vue-cli-plugin-quasar": "^1.0.0",
     "vue-cli-plugin-webpack-bundle-analyzer": "^1.4.0",
     "vue-eslint-parser": "^4.0.3",
     "vue-template-compiler": "^2.6.10",
-    "vuex-module-decorators": "^0.9.9"
+    "vuex-module-decorators": "^0.9.9",
+    "webpack": "^4.38.0"
   },
   "browserslist": [
     "> 1%",
