check cert when testing

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "start": "npm run compose:new && npm run serve",
     "build": "vue-cli-service build --modern",
     "devbuild": "npm run build && mkdir -p ./dev/dist && rm -r ./dev/dist/*; cp -r ./dist/* ./dev/dist/",
-    "test": "vue-cli-service test:unit",
+    "test": "npm run cert:check && vue-cli-service test:unit",
     "test:watch": "vue-cli-service test:unit --watchAll",
     "lint": "eslint \"src/**/*.{js,ts,vue}\"",
     "fix": "npm run lint -- --fix",
