--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,8 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "lib": ["esnext", "dom", "dom.iterable", "scripthost", "webworker"]
+    "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "tests/**/*.ts", "tests/**/*.tsx"],
-  "exclude": [".vscode/**", "node_modules/**"]
+  "exclude": [".vscode/**", "node_modules/**", "**/*.worker.ts"]
 }
