--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "tests/**/*.ts", "tests/**/*.tsx"],
-  "exclude": [".vscode/**", "node_modules/**", "**/*.worker.ts"]
+  "exclude": [".vscode/**", "node_modules/**"]
 }
