--- a/package.json
+++ b/package.json
@@ -95,7 +95,8 @@
     "vue-cli-plugin-webpack-bundle-analyzer": "^1.4.0",
     "vue-eslint-parser": "^4.0.3",
     "vue-template-compiler": "^2.6.10",
-    "vuex-module-decorators": "^0.9.9"
+    "vuex-module-decorators": "^0.9.9",
+    "worker-loader": "^2.0.0"
   },
   "browserslist": [
     "> 1%",
