never handle history/datastore pages in UI

--- a/docker/conf/default.conf
+++ b/docker/conf/default.conf
@@ -7,6 +7,10 @@ server {
 
   server_name brewblox;
 
+  location ~* ^/(history|datastore) {
+    return 404;
+  }
+
   location / {
     try_files $uri $uri/ @rewrites;
   }
