--- a/docker/conf/default.conf
+++ b/docker/conf/default.conf
@@ -7,20 +7,29 @@ server {
 
   server_name brewblox;
 
-  location ~* ^/(history|datastore) {
-    return 404;
-  }
-
-  location / {
+  # Add /ui prefix if missing
+  location ~* ^/(?!(ui)) {
+    rewrite ^/(.*)$ /ui/$1;
     try_files $uri $uri/ @rewrites;
   }
 
-  location @rewrites {
-    rewrite ^(.+)$ /index.html last;
+  # Redirect root /ui to UI index
+  location ~ ^/ui/?$ {
+    rewrite ^/(.*)$ /ui/index.html last;
   }
 
+  # Normal handling of all /ui prefixed files
+  location /ui/ {
+    try_files $uri $uri/ @rewrites;
+  }
+
+  # File was not found, forward to UI index
+  location @rewrites {
+    rewrite ^(.+)$ /ui/index.html last;
+  }
+
+  # Basic cache-control for static files
   location ~* \.(?:ico|css|js|gif|jpe?g|png)$ {
-    # Some basic cache-control for static files to be sent to the browser
     expires max;
     add_header Pragma public;
     add_header Cache-Control "public, must-revalidate, proxy-revalidate";
