--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.2.0",
-    "@types/d3": "^5.7.2",
     "d3-selection": "^1.4.0",
     "dagre-d3": "^0.6.3",
     "date-fns": "^1.30.1",
@@ -57,7 +56,9 @@
     "vuex": "^3.1.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@types/d3": "^5.7.2",
     "@types/jest": "^23.3.14",
     "@types/lodash": "^4.14.136",
     "@types/plotly.js": "^1.44.9",
@@ -75,7 +76,7 @@
     "@vue/cli-service": "^3.11.0",
     "@vue/eslint-config-typescript": "^4.0.0",
     "@vue/test-utils": "^1.0.0-beta.29",
-    "babel-core": "^6.26.3",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-transform-imports": "^1.5.1",
     "dotenv": "^6.2.0",
     "eslint": "^6.2.1",
