--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,11 +34,5 @@
   "[javascript]": {
     "editor.defaultFormatter": "vscode.typescript-language-features"
   },
-  "[jsonc]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[json]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "prettier.eslintIntegration": true
+  "typescript.tsdk": "node_modules/typescript/lib",
 }
