--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "date-fns": "^1.30.1",
     "file-saver": "^2.0.2",
     "lodash": "^4.17.15",
+    "marked": "^0.7.0",
     "parse-duration": "^0.1.1",
     "plotly.js-basic-dist": "^1.50.0",
     "portal-vue": "^1.5.1",
