fix tests for parse object

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dagre-d3": "^0.6.3",
     "date-fns": "^1.30.1",
     "file-saver": "^2.0.2",
+    "fromentries": "^1.2.0",
     "lodash": "^4.17.15",
     "marked": "^0.7.0",
     "parse-duration": "^0.1.1",
