--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "vue-i18n": "^8.14.1",
     "vue-property-decorator": "^8.2.2",
     "vue-router": "^3.1.3",
+    "vue-split-panel": "^1.0.4",
     "vuedraggable": "^2.23.2",
     "vuex": "^3.1.1"
   },
