add init to sparksimulator

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.7"
 
 services:
   eventbus:
@@ -28,6 +28,7 @@ services:
 
   sparksimulator:
     image: brewblox/firmware-simulator:develop
+    init: true
     ports:
       - "7376:7376"
 
@@ -45,8 +46,8 @@ services:
     labels:
       - "traefik.port=5000"
       - "traefik.frontend.rule=PathPrefix: /sparkey"
-    #    volumes:
-    #      - "../brewblox-devcon-spark/:/app/"
+    # volumes:
+    #   - "../brewblox-devcon-spark/:/app/"
     command: >
       --name=sparkey
       --device-host=sparksimulator
