--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.4.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@types/d3": "^5.7.2",
     "@types/jest": "^23.3.14",
