--- a/package.json
+++ b/package.json
@@ -3,31 +3,25 @@
   "version": "0.1.0",
   "description": "UI for the BrewBlox brewing controller",
   "author": "Elco Jacobs / BrewPi B.V.",
-  "repository": "https://github.com/BrewBlox/brewblox-ui",
-  "license": "GPL-3.0",
   "scripts": {
-    "spark:reset": "node dev/reset_spark.js dev/presets/spark_blocks.json",
-    "spark:sparkey": "npm run spark:reset -- sparkey",
-    "spark:spock": "npm run spark:reset -- spock",
-    "spark:blocks": "npm run spark:sparkey && npm run spark:spock",
-    "couchdb:docs": "node dev/reset_datastore.js dev/presets services dashboards dashboard-items layouts",
-    "history:config": "curl -Sk -X POST https://localhost:9001/history/query/configure",
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "eslint \"src/**/*.{js,ts,vue}\"",
     "cert:check": "bash dev/check_cert.sh",
     "compose:new": "docker-compose down && npm run cert:check && docker-compose up -d && npm run compose:setup",
     "compose:setup": "npm run spark:blocks && npm run couchdb:docs && npm run history:config",
-    "serve": "vue-cli-service serve",
-    "start": "npm run compose:new && npm run serve",
-    "build": "vue-cli-service build",
+    "couchdb:docs": "node dev/reset_datastore.js dev/presets services dashboards dashboard-items layouts",
     "devbuild": "rm -r dev/dist/*; vue-cli-service build --dest dev/dist/ --no-clean",
+    "fix": "npm run lint -- --fix",
+    "history:config": "curl -Sk -X POST https://localhost:9001/history/query/configure",
+    "spark:blocks": "npm run spark:sparkey && npm run spark:spock",
+    "spark:reset": "node dev/reset_spark.js dev/presets/spark_blocks.json",
+    "spark:sparkey": "npm run spark:reset -- sparkey",
+    "spark:spock": "npm run spark:reset -- spock",
+    "start": "npm run compose:new && npm run serve",
     "test": "npm run cert:check && vue-cli-service test:unit",
     "test:watch": "vue-cli-service test:unit --watchAll",
-    "lint": "eslint \"src/**/*.{js,ts,vue}\"",
-    "fix": "npm run lint -- --fix",
     "validate": "tsc --noEmit"
-  },
-  "engines": {
-    "node": ">= 10.13.0",
-    "npm": ">= 6.4.1"
   },
   "dependencies": {
     "@quasar/extras": "^1.3.3",
@@ -36,16 +30,16 @@
     "fromentries": "^1.2.0",
     "lodash": "^4.17.15",
     "marked": "^0.7.0",
-    "parse-duration": "^0.1.1",
+    "parse-duration": "^0.1.2",
     "plotly.js-basic-dist": "^1.51.2",
     "portal-vue": "^1.5.1",
     "pouchdb": "^7.1.1",
-    "quasar": "^1.5.4",
+    "quasar": "^1.5.9",
     "query-string": "^6.9.0",
     "svg-path-properties": "^0.4.11",
     "typescript": "^3.7.3",
     "url-safe-string": "^1.1.0",
-    "vue": "^2.6.10",
+    "vue": "^2.6.11",
     "vue-class-component": "^6.3.2",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
@@ -54,29 +48,30 @@
     "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.4",
+    "@babel/core": "^7.7.5",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.7.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.7.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.7.5",
     "@babel/plugin-syntax-dynamic-import": "^7.7.4",
     "@types/d3": "^5.7.2",
     "@types/jest": "^23.3.14",
     "@types/lodash": "^4.14.149",
-    "@types/plotly.js": "^1.44.17",
+    "@types/plotly.js": "^1.44.20",
     "@types/pouchdb": "^6.4.0",
     "@types/webpack": "^4.41.0",
     "@types/webpack-chain": "^5.2.0",
     "@types/webpack-env": "^1.14.1",
-    "@typescript-eslint/eslint-plugin": "^2.10.0",
-    "@typescript-eslint/parser": "^2.10.0",
-    "@vue/cli-plugin-babel": "^3.12.1",
-    "@vue/cli-plugin-eslint": "^3.12.1",
-    "@vue/cli-plugin-typescript": "^3.12.1",
-    "@vue/cli-plugin-unit-jest": "^3.12.1",
-    "@vue/cli-service": "^3.12.1",
+    "@typescript-eslint/eslint-plugin": "^2.11.0",
+    "@typescript-eslint/parser": "^2.11.0",
+    "@vue/cli-plugin-babel": "^4.1.1",
+    "@vue/cli-plugin-eslint": "^4.1.1",
+    "@vue/cli-plugin-typescript": "^4.1.1",
+    "@vue/cli-plugin-unit-jest": "^4.1.1",
+    "@vue/cli-service": "^4.1.1",
     "@vue/eslint-config-typescript": "^4.0.0",
     "@vue/test-utils": "^1.0.0-beta.30",
     "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-transform-imports": "^1.5.1",
+    "core-js": "^3.5.0",
     "dotenv": "^6.2.0",
     "eslint": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^4.0.0",
@@ -92,10 +87,10 @@
     "stylus-loader": "^3.0.1",
     "ts-jest": "^23.10.5",
     "tsutils": "^3.17.1",
-    "vue-cli-plugin-quasar": "^1.0.0",
-    "vue-cli-plugin-webpack-bundle-analyzer": "^1.4.0",
+    "vue-cli-plugin-quasar": "^2.0.0",
+    "vue-cli-plugin-webpack-bundle-analyzer": "^2.0.0",
     "vue-eslint-parser": "^5.0.0",
-    "vue-template-compiler": "^2.6.10",
+    "vue-template-compiler": "^2.6.11",
     "vuex-module-decorators": "^0.9.11",
     "worker-loader": "^2.0.0"
   },
@@ -103,5 +98,11 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "engines": {
+    "node": ">= 10.13.0",
+    "npm": ">= 6.4.1"
+  },
+  "license": "GPL-3.0",
+  "repository": "https://github.com/BrewBlox/brewblox-ui"
 }
