update vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,25 +2,12 @@
   "vetur.format.defaultFormatter.html": "none",
   "vetur.format.defaultFormatter.js": "vscode-typescript",
   "vetur.format.defaultFormatter.ts": "vscode-typescript",
-  "eslint.autoFixOnSave": true,
   "eslint.run": "onType",
   "eslint.validate": [
-    {
-      "language": "vue",
-      "autoFix": true
-    },
-    {
-      "language": "html",
-      "autoFix": true
-    },
-    {
-      "language": "javascript",
-      "autoFix": true
-    },
-    {
-      "language": "typescript",
-      "autoFix": true
-    }
+    "vue",
+    "html",
+    "javascript",
+    "typescript"
   ],
   "editor.formatOnSave": true,
   "jest.debugMode": true,
@@ -35,4 +22,7 @@
     "editor.defaultFormatter": "vscode.typescript-language-features"
   },
   "typescript.tsdk": "./node_modules/typescript/lib",
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
 }
