--- a/package.json
+++ b/package.json
@@ -15,19 +15,15 @@
     "cert:check": "bash dev/check_cert.sh",
     "compose:new": "docker-compose down && npm run cert:check && docker-compose up -d && npm run compose:setup",
     "compose:setup": "npm run spark:blocks && npm run couchdb:docs && npm run history:config",
-    "serve": "vue-cli-service serve",
+    "serve": "quasar dev",
     "start": "npm run compose:new && npm run serve",
-    "build": "vue-cli-service build",
-    "devbuild": "rm -r dev/dist/*; vue-cli-service build --dest dev/dist/ --no-clean",
-    "test": "npm run cert:check && vue-cli-service test:unit",
-    "test:watch": "vue-cli-service test:unit --watchAll",
-    "lint": "eslint \"src/**/*.{js,ts,vue}\"",
+    "build": "quasar build",
+    "devbuild": "rm -r dev/dist/*; quasar build --dest dev/dist/ --no-clean",
+    "test": "npm run cert:check && quasar test",
+    "test:watch": "quasar test --watchAll",
+    "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore ./src",
     "fix": "npm run lint -- --fix",
     "validate": "tsc --noEmit"
-  },
-  "engines": {
-    "node": ">= 10.13.0",
-    "npm": ">= 6.4.1"
   },
   "dependencies": {
     "@quasar/extras": "^1.3.3",
@@ -43,7 +39,6 @@
     "quasar": "^1.5.4",
     "query-string": "^6.9.0",
     "svg-path-properties": "^0.4.11",
-    "typescript": "^3.7.3",
     "url-safe-string": "^1.1.0",
     "vue": "^2.6.10",
     "vue-class-component": "^6.3.2",
@@ -58,50 +53,54 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.7.4",
     "@babel/plugin-proposal-optional-chaining": "^7.7.4",
     "@babel/plugin-syntax-dynamic-import": "^7.7.4",
+    "@quasar/app": "^1.4.1",
+    "@quasar/quasar-app-extension-typescript": "^1.0.0-beta.2",
     "@types/d3": "^5.7.2",
     "@types/jest": "^23.3.14",
     "@types/lodash": "^4.14.149",
+    "@types/node": "11.9.5",
     "@types/plotly.js": "^1.44.17",
     "@types/pouchdb": "^6.4.0",
     "@types/webpack": "^4.41.0",
     "@types/webpack-chain": "^5.2.0",
     "@types/webpack-env": "^1.14.1",
-    "@typescript-eslint/eslint-plugin": "^2.10.0",
-    "@typescript-eslint/parser": "^2.10.0",
-    "@vue/cli-plugin-babel": "^3.12.1",
-    "@vue/cli-plugin-eslint": "^3.12.1",
-    "@vue/cli-plugin-typescript": "^3.12.1",
-    "@vue/cli-plugin-unit-jest": "^3.12.1",
-    "@vue/cli-service": "^3.12.1",
+    "@typescript-eslint/eslint-plugin": "^1.12.0",
+    "@typescript-eslint/parser": "^1.12.0",
+    "@vue/devtools": "^5.3.3",
     "@vue/eslint-config-typescript": "^4.0.0",
     "@vue/test-utils": "^1.0.0-beta.30",
     "babel-core": "^7.0.0-bridge.0",
     "babel-plugin-transform-imports": "^1.5.1",
     "dotenv": "^6.2.0",
     "eslint": "^5.0.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-quasar": "^1.0.0-alpha.17",
     "eslint-plugin-simple-import-sort": "^4.0.0",
     "eslint-plugin-vue": "^5.2.3",
-    "fork-ts-checker-webpack-plugin": "^1.6.0",
+    "fibers": "^4.0.2",
+    "fork-ts-checker-webpack-plugin": "^3.1.1",
     "git-describe": "^4.0.4",
     "jest": "^25.0.0",
+    "node-sass": "^4.13.0",
     "prettier-eslint": "^9.0.1",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.8",
-    "semver": "^5.7.1",
-    "stylus": "^0.54.7",
-    "stylus-loader": "^3.0.1",
-    "ts-jest": "^23.10.5",
+    "sass-loader": "^8.0.0",
+    "ts-loader": "^6.2.1",
     "tsutils": "^3.17.1",
-    "vue-cli-plugin-quasar": "^1.0.0",
-    "vue-cli-plugin-webpack-bundle-analyzer": "^1.4.0",
+    "typescript": "^3.7.3",
     "vue-eslint-parser": "^5.0.0",
     "vue-template-compiler": "^2.6.10",
-    "vuex-module-decorators": "^0.9.11",
-    "worker-loader": "^2.0.0"
+    "vuex-module-decorators": "^0.9.11"
+  },
+  "engines": {
+    "node": ">= 10.13.0",
+    "npm": ">= 6.4.1"
   },
   "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+    "last 1 version, not dead, ie >= 11"
+  ],
+  "resolutions": {
+    "ajv": "6.8.1"
+  }
 }
