--- a/package.json
+++ b/package.json
@@ -6,23 +6,28 @@
   "repository": "https://github.com/BrewBlox/brewblox-ui",
   "license": "GPL-3.0",
   "scripts": {
+    "makecert": "bash dev/makecert.sh",
     "spark:reset": "node dev/reset_spark.js dev/presets/spark_blocks.json",
     "spark:sparkey": "npm run spark:reset -- sparkey",
     "spark:spock": "npm run spark:reset -- spock",
     "spark:blocks": "npm run spark:sparkey && npm run spark:spock",
     "couchdb:docs": "node dev/reset_datastore.js dev/presets services dashboards dashboard-items layouts",
     "history:config": "curl -Sk -X POST https://localhost:9001/history/query/configure",
-    "cert:check": "bash dev/check_cert.sh",
-    "compose:new": "docker-compose down && npm run cert:check && docker-compose up -d && npm run compose:setup",
+    "compose:new": "docker-compose down && npm run makecert && docker-compose up -d && npm run compose:setup",
     "compose:setup": "npm run spark:blocks && npm run couchdb:docs && npm run history:config",
     "serve": "quasar dev",
     "start": "npm run compose:new && npm run serve",
     "build": "quasar build",
     "devbuild": "rm -r dev/dist/*; quasar build && cp -r dist/* dev/dist/",
-    "test": "npm run cert:check && quasar test",
-    "test:watch": "quasar test --watchAll",
-    "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore ./src",
-    "fix": "npm run lint -- --fix"
+    "test": "npm run test:unit",
+    "lint": "eslint --ext .js,.ts,.vue --ignore-path .gitignore ./src ./test",
+    "lint:fix": "npm run lint -- --fix",
+    "test:unit": "jest --updateSnapshot",
+    "test:unit:coverage": "jest --coverage",
+    "test:unit:watch": "jest --watch",
+    "test:unit:watchAll": "jest --watchAll",
+    "serve:test:coverage": "quasar serve test/jest/coverage/lcov-report/ --port 8788",
+    "concurrently:dev:jest": "concurrently \"quasar dev\" \"jest --watch\""
   },
   "dependencies": {
     "@quasar/extras": "^1.3.3",
@@ -51,7 +56,10 @@
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.7.4",
     "@babel/plugin-proposal-optional-chaining": "^7.7.5",
     "@babel/plugin-syntax-dynamic-import": "^7.7.4",
+    "@babel/preset-typescript": "^7.7.4",
     "@quasar/app": "^1.4.1",
+    "@quasar/quasar-app-extension-testing": "^1.0.0",
+    "@quasar/quasar-app-extension-testing-unit-jest": "^1.0.0",
     "@quasar/quasar-app-extension-typescript": "^1.0.0-beta.2",
     "@types/d3": "^5.7.2",
     "@types/jest": "^23.3.14",
