--- a/quasar.extensions.json
+++ b/quasar.extensions.json
@@ -2,5 +2,17 @@
   "@quasar/typescript": {
     "webpack": "plugin",
     "prettier": false
+  },
+  "@quasar/testing": {
+    "harnesses": [
+      "unit-jest"
+    ]
+  },
+  "@quasar/testing-unit-jest": {
+    "babel": "babelrc",
+    "options": [
+      "scripts",
+      "SFC"
+    ]
   }
 }
