--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,10 +30,9 @@
   },
   "include": [
     "src/**/*.ts",
-    "src/**/*.tsx",
     "src/**/*.vue",
-    "dist/tests/**/*.ts",
-    "dist/tests/**/*.tsx"
+    "test/**/*.ts",
+    "test/**/*.vue",
   ],
   "exclude": [
     ".vscode/**",
